[package]
name = "traefik-forward-auth-rust"
version = "0.1.0"
edition = "2021"
authors = ["Paul Adams <nihaopaul@gmail.com>"]

[dependencies]
axum = "0.8.4"
local-ip-address = "0.6.5"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower-cookies = "0.11.0"

[dependencies.cloudflare-dynamic-config]
path = "cloudflare-dynamic-config"

[dependencies.cloudflare-authenticator]
path = "cloudflare-authenticator"
