[package]
name = "cloudflare-authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.0"
serde_urlencoded = "0.7.1"
mockito = "1.6.1"
jsonwebtoken = "9.3.0"
